--- a/tmux.conf
+++ b/tmux.conf
@@ -1,12 +1,34 @@
-# window splits
-bind v split-window -h -c '#{pane_current_path}'  # Split panes horizontal
-bind b split-window -v -c '#{pane_current_path}'  # Split panes vertically
+# split panes horizontally/vertically
+bind v split-window -h -c '#{pane_current_path}'
+bind b split-window -v -c '#{pane_current_path}'
 
-# Smart pane switching with awareness of vim splits
-# See: https://github.com/christoomey/vim-tmux-navigator
+# switch windows
+bind -n C-n previous-window
+bind -n C-p next-window 
+
+# Smart pane switching with awareness of vim splits (https://github.com/christoomey/vim-tmux-navigator)
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+set -g default-terminal "screen-256color" # upgrade $TERM
+set-option -g mouse on # enable mouse
+
+set -g @plugin 'tmux-plugins/tpm' # plugin manager
+
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux environment
+set -g @resurrect-capture-pane-contents 'on' # enable pane content persistance
+
+set -g @plugin 'tmux-plugins/tmux-continuum' # save tmux env on interval
+set -g @continuum-restore 'on' # restore env when tmux starts
+set -g @continuum-save-interval '5' # save every 5 minutes
+
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @scroll-without-changing-pane "on"
+set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
