--- a/tmux.conf
+++ b/tmux.conf
@@ -30,5 +30,7 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @scroll-without-changing-pane "on"
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
+set -g @plugin 'jimeh/tmux-themepack'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
