--- a/tmux.conf
+++ b/tmux.conf
@@ -6,23 +6,17 @@ bind b split-window -v -c '#{pane_current_path}'
 bind -n C-n previous-window
 bind -n C-p next-window 
 
-# Smart pane switching with awareness of vim splits (https://github.com/christoomey/vim-tmux-navigator)
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+# transparent status bar
+set status-bg default
+set -g status-left-bg default
+set -g status-right-bg default
 
+# misc
 set -g default-terminal "screen-256color" # upgrade $TERM
 set-option -g mouse on # enable mouse
 
-set -g @plugin 'tmux-plugins/tpm' # plugin manager
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux environment
-  set -g @resurrect-capture-pane-contents 'on' # enable pane content persistance
-set -g @plugin 'tmux-plugins/tmux-continuum' # save tmux env on interval
-  set -g @continuum-restore 'on' # restore env when tmux starts
-  set -g @continuum-save-interval '5' # save every 5 minutes
+# plugins
+set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
   set -g @scroll-without-changing-pane "on"
   set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
