--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,8 @@ set -g status-left-bg default
 set -g status-right-bg default
 
 # misc
-set -g default-terminal "screen-256color" # upgrade $TERM
-set-option -g mouse on # enable mouse
+set -g default-terminal "screen-256color"
+set-option -g mouse on
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
