--- a/tmux.conf
+++ b/tmux.conf
@@ -2,14 +2,16 @@
 bind v split-window -h -c '#{pane_current_path}'
 bind b split-window -v -c '#{pane_current_path}'
 
+# open new window in same dir as old window
+bind c new-window -c "#{pane_current_path}"
+
 # switch windows
 bind -n C-n previous-window
 bind -n C-p next-window 
 
 # transparent status bar
-set status-bg default
-set -g status-left-bg default
-set -g status-right-bg default
+set -g status-bg default
+set -g status-fg white
 
 # misc
 set -g default-terminal "screen-256color"
