--- a/tmux.conf
+++ b/tmux.conf
@@ -9,12 +9,15 @@ bind c new-window -c "#{pane_current_path}"
 bind -n C-n previous-window
 bind -n C-p next-window 
 
-# transparent status bar
+# status bar color
 set -g status-bg default
 set -g status-fg white
 
+# truecolor support
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # misc
-set -g default-terminal "screen-256color"
 set-option -g mouse on
 
 # plugins
@@ -23,5 +26,4 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
   set -g @scroll-without-changing-pane "on"
   set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
