--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ set-option -g mouse on
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'bigolu/vim-tmux-navigator'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
   set -g @scroll-without-changing-pane "on"
   set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
