--- a/tmux.conf
+++ b/tmux.conf
@@ -11,7 +11,7 @@ bind -n C-p next-window
 
 # status bar color
 set -g status-bg default
-set -g status-fg red
+set -g status-fg colour129
 
 # truecolor support
 set -g default-terminal "xterm-256color"
