--- a/tmux.conf
+++ b/tmux.conf
@@ -9,10 +9,6 @@ bind c new-window -c "#{pane_current_path}"
 bind -n C-n previous-window
 bind -n C-p next-window 
 
-# status bar color
-set -g status-bg default
-set -g status-fg default
-
 # truecolor support
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -24,7 +20,7 @@ set-option -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'bigolu/vim-tmux-navigator'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-  set -g @scroll-without-changing-pane "on"
-  set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-
+    set -g @scroll-without-changing-pane "on"
+    set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+set -g @plugin "bigolu/nord-tmux"
 run '~/.tmux/plugins/tpm/tpm'
