--- a/tmux.conf
+++ b/tmux.conf
@@ -13,14 +13,27 @@ bind -n C-p next-window
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# Smart pane switching with awareness of vim splits
+# see: https://github.com/christoomey/vim-tmux-navigator
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
 # misc
 set-option -g mouse on
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'bigolu/vim-tmux-navigator'
+set -g @plugin "bigolu/nord-tmux"
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
-set -g @plugin "bigolu/nord-tmux"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+  set -g @resurrect-capture-pane-contents 'on'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+  set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
 run '~/.tmux/plugins/tpm/tpm'
