--- a/tmux.conf
+++ b/tmux.conf
@@ -23,11 +23,13 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # misc
 set-option -g mouse on
+bind S choose-tree
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'bigolu/vim-tmux-navigator'
 set -g @plugin "bigolu/nord-tmux"
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
