--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,8 @@ bind b split-window -v -c '#{pane_current_path}'
 bind c new-window -c "#{pane_current_path}"
 
 # switch windows
-bind -n C-n previous-window
-bind -n C-p next-window 
+bind -n C-n next-window
+bind -n C-p previous-window 
 
 # truecolor support
 set -g default-terminal "xterm-256color"
