--- a/tmux.conf
+++ b/tmux.conf
@@ -19,7 +19,7 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'bigolu/vim-tmux-navigator'
-set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'bigolu/nord-tmux'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
