--- a/tmux.conf
+++ b/tmux.conf
@@ -1,24 +1,28 @@
 # split panes horizontally/vertically
-bind v split-window -h -c '#{pane_current_path}'
-bind b split-window -v -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
+bind _ split-window -v -c '#{pane_current_path}'
 
-bind c new-window -c "#{pane_current_path}"
-bind -n C-n next-window
-bind -n C-p previous-window 
+# reload
+bind R run-shell 'tmux source ~/.tmux.conf && echo "tmux reloaded"'
+
+bind t new-window -c "#{pane_current_path}"
+#bind -n C-l next-window
+#bind -n C-h previous-window 
 set-option -g mouse on
 set -g default-terminal "xterm-256color"
+set-option -g allow-rename off
 
 # Smart pane switching with awareness of vim splits
 # see: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-Left if-shell "$is_vim" "send-keys C-Left" "select-pane -L"
+bind -n C-Down if-shell "$is_vim" "send-keys C-Down" "select-pane -D"
+bind -n C-Up if-shell "$is_vim" "send-keys C-Up" "select-pane -U"
+bind -n C-Right if-shell "$is_vim" "send-keys C-Right" "select-pane -R"
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'bigolu/vim-tmux-navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'bigolu/nord-tmux'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
