--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,9 @@ bind _ split-window -v -c '#{pane_current_path}'
 # reload
 bind R run-shell 'tmux source ~/.tmux.conf && echo "tmux reloaded"'
 
+# close session
+bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
+
 bind t new-window -c "#{pane_current_path}"
 #bind -n C-l next-window
 #bind -n C-h previous-window 
@@ -15,10 +18,10 @@ set-option -g allow-rename off
 # Smart pane switching with awareness of vim splits
 # see: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
-bind -n C-Left if-shell "$is_vim" "send-keys C-Left" "select-pane -L"
-bind -n C-Down if-shell "$is_vim" "send-keys C-Down" "select-pane -D"
-bind -n C-Up if-shell "$is_vim" "send-keys C-Up" "select-pane -U"
-bind -n C-Right if-shell "$is_vim" "send-keys C-Right" "select-pane -R"
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -27,4 +30,9 @@ set -g @plugin 'bigolu/nord-tmux'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
+set -g @plugin 'tmux-plugins/tmux-continuum'
+    set -g @continuum-restore 'on'
+    set -g @continuum-save-interval '5' # measured in minutes
 run '~/.tmux/plugins/tpm/tpm'
