--- a/tmux.conf
+++ b/tmux.conf
@@ -8,7 +8,7 @@ bind R run-shell 'tmux source ~/.tmux.conf && echo "tmux reloaded"'
 # close session
 bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
 
-bind t new-window -c "#{pane_current_path}"
+bind T new-window -c "#{pane_current_path}"
 #bind -n C-l next-window
 #bind -n C-h previous-window 
 set-option -g mouse on
