--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,9 @@ set-option -g mouse on
 set -g default-terminal "xterm-256color"
 set-option -g allow-rename off
 
+bind-key -n M-Left previous-window
+bind-key -n M-RIght next-window
+
 # Smart pane switching with awareness of vim splits
 # see: https://github.com/christoomey/vim-tmux-navigator
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff)?$"'
