--- a/tmux.conf
+++ b/tmux.conf
@@ -9,8 +9,6 @@ bind R run-shell 'tmux source ~/.tmux.conf && echo "tmux reloaded"'
 bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
 
 bind T new-window -c "#{pane_current_path}"
-#bind -n C-l next-window
-#bind -n C-h previous-window 
 set-option -g mouse on
 set -g default-terminal "xterm-256color"
 set-option -g allow-rename off
@@ -29,7 +27,7 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'bigolu/nord-tmux'
+set -g @plugin "bigolu/nord-tmux"
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
