--- a/tmux.conf
+++ b/tmux.conf
@@ -52,7 +52,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
-    set -g @continuum-restore 'on' # enable auto restoration when tmux is started
+    set -g @continuum-restore 'on' # Automatically restore session when tmux is started
     set -g @continuum-save-interval '1' # measured in minutes
 # Start the plugin manager
 run '~/.tmux/plugins/tpm/tpm'
