--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,3 @@
-# split panes horizontally/vertically
-bind | split-window -h -c '#{pane_current_path}'
-bind _ split-window -v -c '#{pane_current_path}'
-# reload
-bind R run-shell 'tmux source ~/.tmux.conf && echo "tmux reloaded"'
-# close session
-bind Q confirm-before -p "kill-session #S? (y/n)" kill-session
-# new tab
-bind T new-window -c "#{pane_current_path}"
-
 # allow mouse use
 set-option -g mouse on
 # let colors pass through
@@ -15,6 +5,13 @@ set -g default-terminal "xterm-256color"
 # disallow tmux from renaming windows, this way my custom name isn't overwritten
 set-option -g allow-rename off
 
+# new tab
+bind c new-window -c "#{pane_current_path}"
+# split panes horizontally/vertically
+bind '"' split-window -h -c '#{pane_current_path}'
+bind % split-window -v -c '#{pane_current_path}'
+# reload
+bind r run-shell 'tmux display-message "Reloading TMUX..." && tmux source ~/.tmux.conf'
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
 bind-key -n M-RIght next-window
