--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ set -g default-terminal "xterm-256color"
 # disallow tmux from renaming windows, this way my custom name isn't overwritten
 set-option -g allow-rename off
 
-# new tab
+# Create a new pane using the current pane's directory as the new pane's directory
 bind c new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically
 bind '"' split-window -h -c '#{pane_current_path}'
@@ -15,6 +15,8 @@ bind r run-shell 'tmux display-message "Reloading TMUX..." && tmux source ~/.tmu
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
 bind-key -n M-RIght next-window
+# toggle zoom on pane
+bind-key -n M-z resize-pane -Z
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -49,7 +51,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
-    set -g @continuum-restore 'on' # Automatically restore session when tmux is started
+    # set -g @continuum-restore 'on' # Automatically restore session when tmux is started
     set -g @continuum-save-interval '1' # measured in minutes
 # Start the plugin manager
 run '~/.tmux/plugins/tpm/tpm'
