--- a/tmux.conf
+++ b/tmux.conf
@@ -5,9 +5,9 @@ set -g default-terminal "xterm-256color"
 # disallow tmux from renaming windows, this way my custom name isn't overwritten
 set-option -g allow-rename off
 
-# Create a new pane using the current pane's directory as the new pane's directory
+# Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
-# split panes horizontally/vertically
+# split panes horizontally/vertically using the current pane's directory as the new pane's directory
 bind '"' split-window -h -c '#{pane_current_path}'
 bind % split-window -v -c '#{pane_current_path}'
 # reload
