--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,8 @@ set-option -g mouse on
 set -g default-terminal "xterm-256color"
 # disallow tmux from renaming windows, this way my custom name isn't overwritten
 set-option -g allow-rename off
+set-option -g renumber-windows on
+bind-key -n MouseDrag1Status swap-window -d -t=
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
