--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -759,7 +759,7 @@ hide_window_decorations no
 
 #: The foreground and background colors
 
-background_opacity .95
+background_opacity .96
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -1176,7 +1176,7 @@ wayland_titlebar_color background
 #: The full list of actions that can be mapped to key presses is
 #: available here </actions>.
 
-# kitty_mod ctrl+shift
+kitty_mod super
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -1198,7 +1198,7 @@ wayland_titlebar_color background
 
 #: Clipboard {{{
 
-# map kitty_mod+c copy_to_clipboard
+map kitty_mod+c copy_to_clipboard
 
 #: There is also a copy_or_interrupt action that can be optionally
 #: mapped to Ctrl+c. It will copy only if there is a selection and
@@ -1206,7 +1206,7 @@ wayland_titlebar_color background
 #: will copy and clear the selection or send an interrupt if there is
 #: no selection.
 
-# map kitty_mod+v paste_from_clipboard
+map kitty_mod+v paste_from_clipboard
 # map kitty_mod+s paste_from_selection
 # map kitty_mod+o pass_selection_to_program
 
