--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1178,11 +1178,13 @@ wayland_titlebar_color background
 
 kitty_mod super
 
+map kitty_mod+t no_op
+
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-clear_all_shortcuts yes
+# clear_all_shortcuts no
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
