--- a/tmux.conf
+++ b/tmux.conf
@@ -28,6 +28,10 @@ bind-key -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
 bind-key -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind-key -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
+bind-key -n C-Left if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
+bind-key -n C-Down if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
+bind-key -n C-Up if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
+bind-key -n C-Right if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
