switch kitty to day/night mode First, we represent the current kitty theme, current-theme.conf, as a symlink to either day-theme.conf or night-theme.conf. Now switching can be done by changing where current-theme.conf points and sending kitty the SIGUSR1 signal so that it reloads and reads the new theme that is pointed to by current-theme.conf. current-theme.conf got added to the .gitignore since its just a pointer to an actual theme.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,6 @@
 - defaults:
     link:
       create: true
-      relink: true
 
 - clean: ['~', '~/.config']
 
@@ -12,6 +11,7 @@
     ~/.xbindkeysrc: xbindkeysrc
     ~/.bashrc: bashrc
     ~/.config/kitty: kitty
+    ~/.config/kitty/current-theme.conf: ~/.config/kitty/night-theme.conf
     ~/.asdfrc: asdf/asdfrc
     ~/.default-python-packages: asdf/default-python-packages
     ~/.tool-versions: asdf/tool-versions
