--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,22 +1,23 @@
+# Solarized Light
 
-background            #ffffff
-foreground            #5b6673
-cursor                #ff6900
-selection_background  #f0ede4
-color0                #000000
-color8                #323232
-color1                #ff3333
-color9                #ff6565
-color2                #86b200
-color10               #b8e532
-color3                #f19618
-color11               #ffc849
-color4                #41a6d9
-color12               #73d7ff
-color5                #f07078
-color13               #ffa3aa
-color6                #4cbe99
-color14               #7ff0cb
-color7                #ffffff
-color15               #ffffff
-selection_foreground #fafafa
+background            #fdf6e3
+foreground            #52676f
+cursor                #52676f
+selection_background  #e9e2cb
+color0 #e4e4e4
+color8 #ffffd7
+color1 #d70000
+color9 #d75f00
+color2 #5f8700
+color10 #585858
+color3 #af8700
+color11 #626262
+color4 #0087ff
+color12 #808080
+color5 #af005f
+color13 #5f5faf
+color6 #00afaf
+color14 #8a8a8a
+color7 #262626
+color15 #1c1c1c
+selection_foreground #fcf4dc
