only attempt to link if it doesn't exist We do this since these particular symlinks might be changed externally by a theme switcher and if it does change then dotbot will report that the symlink is "incorrect" since it doesn't link to the same file that dotbot originally linked it to.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,12 +8,16 @@
     ~/.tmux.conf: tmux.conf
     ~/.vimrc: vim/vimrc
     ~/.vim/colorscheme: vim/colorscheme
-    ~/.vim/colorscheme/colorscheme-name.txt: ~/.vim/colorscheme/night-colorscheme-name.txt
+    ~/.vim/colorscheme/colorscheme-name.txt:
+        path: ~/.vim/colorscheme/night-colorscheme-name.txt
+        if: '[ ! -f ~/.vim/colorscheme/colorscheme-name.txt ]'
     ~/.gitconfig: gitconfig
     ~/.xbindkeysrc: xbindkeysrc
     ~/.bashrc: bashrc
     ~/.config/kitty: kitty
-    ~/.config/kitty/current-theme.conf: ~/.config/kitty/night-theme.conf
+    ~/.config/kitty/current-theme.conf:
+        path: ~/.config/kitty/night-theme.conf
+        if: '[ ! -f ~/.config/kitty/current-theme.conf ]'
     ~/.asdfrc: asdf/asdfrc
     ~/.default-python-packages: asdf/default-python-packages
     ~/.tool-versions: asdf/tool-versions
