don't mess with window

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -599,7 +599,7 @@ enable_audio_bell no
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations no
+# hide_window_decorations no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only can be used to only hide the titlebar.
@@ -1030,7 +1030,7 @@ background_opacity .97
 
 #: OS specific tweaks {{{
 
-wayland_titlebar_color background
+# wayland_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
