add way to change tmux to light/dark mode tmux/tmux.conf - instead of loading a theme plugin load the script theme.conf which will set the theme.
tmux/theme/theme.conf - sources set-current-theme-colors.conf which is a symlink to either set-day-theme-colors.conf or set-night-theme-colors.conf. Those two files will set tmux options which define what colors to use for light and dark mode respectively. After sourcing the symlink, the tmux status bar is configured using the newly set options.

.gitignore - ignore set-current-theme-colors.conf since it's just a symlink

install.conf.yaml - configure dotbot to link in all the new files

switch-theme - change where the symlink points and have tmux reload its theme

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,10 +2,14 @@
     link:
       create: true
 
-- clean: ['~', '~/.config', '~/.vim', '~/.vim/colorscheme']
+- clean: ['~', '~/.config', '~/.vim', '~/.vim/colorscheme', '~/.tmux', '~/.tmux/theme']
 
 - link:
-    ~/.tmux.conf: tmux.conf
+    ~/.tmux.conf: tmux/tmux.conf
+    ~/.tmux/theme: tmux/theme
+    ~/.tmux/theme/set-current-theme-colors.conf:
+        path: ~/.tmux/theme/set-night-theme-colors.conf
+        if: '[ ! -f ~/.tmux/theme/set-current-theme-colors.conf ]'
     ~/.vimrc: vim/vimrc
     ~/.vim/colorscheme: vim/colorscheme
     ~/.vim/colorscheme/colorscheme-name.txt:
