--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,12 +43,13 @@ bind-key -T copy-mode-vi 'M-k' select-pane -U
 bind-key -T copy-mode-vi 'M-l' select-pane -R
 bind-key -T copy-mode-vi 'M-\' select-pane -l
 
+# status bar configuration
+source-file ~/.tmux/theme/theme.conf
+
 # Plugins
 #######################################
 # tmux plugin manager
 set -g @plugin 'tmux-plugins/tpm'
-# status bar configuration
-set -g @plugin "bigolu/nord-tmux"
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @scroll-without-changing-pane "on"
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
