allow bash prompt to be changes to light/dark mode
.gitignore - set-current-theme-colors.sh is just a symlink so it doesn't need to be tracked

set-{day|night}-theme-colors.sh - exports environment variables for each color to be used in the prompt

bashrc - Instead of setting the prompt with PS1 environment variable, the prompt is set through a function that gets called from PROMPT_COMMAND. This is done because we need the prompt to get reevaluated every time it gets displayed in case the colors were changed.

switch-theme - change where the symlink points so that when the PROMPT_COMMAND gets evaluated, the colors from the newly linked theme will be set

install.conf.yaml - create symlinks for the new files

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,7 +17,11 @@
         if: '[ ! -f ~/.vim/colorscheme/colorscheme-name.txt ]'
     ~/.gitconfig: gitconfig
     ~/.xbindkeysrc: xbindkeysrc
-    ~/.bashrc: bashrc
+    ~/.bashrc: bash/bashrc
+    ~/.bash_prompt_theme: bash/bash_prompt_theme
+    ~/.bash_prompt_theme/set-current-theme-colors.sh:
+        path: ~/.bash_prompt_theme/set-night-theme-colors.sh
+        if: '[ ! -f ~/.bash_prompt_theme/set-current-theme-colors.sh ]'
     ~/.config/kitty: kitty
     ~/.config/kitty/current-theme.conf:
         path: ~/.config/kitty/night-theme.conf
