--- a/installer/install.conf.yaml
+++ b/installer/install.conf.yaml
@@ -34,3 +34,17 @@
 
 - create:
     - ~/code
+
+- asdf:
+    - plugin: python
+      global: 3.10.0
+      versions:
+          - 3.10.0
+    - plugin: nodejs
+      global: 17.0.1
+      versions:
+          - 17.0.1
+    - plugin: golang
+      global: 1.17.2
+      versions:
+          - 1.17.2
