use conventional way of avoiding file/directory name collisions The folder was onl called 'installer' to avoid a collision with the file 'install' inside of it. Apparently unix systems solve this by using a '.d' suffix for the directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "dotbot"]
-	path = installer/dotbot
+	path = install.d/dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
 [submodule "installer/dotbot-asdf"]
-	path = installer/dotbot-asdf
+	path = install.d/dotbot-asdf
 	url = https://github.com/sobolevn/dotbot-asdf.git
