change light theme to github light

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,23 +1,23 @@
-# Solarized Light
+# Github Light
 
-background            #fdf6e3
-foreground            #586e75
-cursor                #93a1a1
-selection_background  #002b36
-selection_foreground #fdf6e3
-color0 #073642
-color1 #dc322f
-color2 #859900
-color3 #b58900
-color4 #268bd2
-color5 #d33682
-color6 #2aa198
-color7 #C2BBA5
-color8 #002b36
-color9 #cb4b16
-color10 #586e75
-color11 #657b83
-color12 #839496
-color13 #6c71c4
-color14 #93a1a1
-color15 #fdf6e3
+background            #F0F0F0
+foreground            #3e3e3e
+cursor                #3f3f3f
+selection_background  #a9c1e2
+color0                #3e3e3e
+color8                #666666
+color1                #970b16
+color9                #de0000
+color2                #07962a
+color10               #87d5a2
+color3                #f7edc7
+color11               #f0cf06
+color4                #005cc5 
+color12               #2e6cba 
+color5                #e94691
+color13               #d73a49
+color6                #89d1ec
+color14               #1cfafe
+color7                #babbbc
+color15               #666666
+selection_foreground  #f0f0f0
