--- a/tmux/theme/set-day-theme-colors.conf
+++ b/tmux/theme/set-day-theme-colors.conf
@@ -1,6 +1,6 @@
-# Solarized Light
+# Github Light
 
 set -g @activecolor 'brightmagenta'
-set -g @inactivecolor 'brightcyan'
+set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'white'
 set -g @altcolor 'cyan'
