--- a/tmux/theme/set-night-theme-colors.conf
+++ b/tmux/theme/set-night-theme-colors.conf
@@ -1,6 +1,6 @@
 # Nord
 
 set -g @activecolor 'magenta'
-set -g @inactivecolor 'white'
+set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'brightblack'
 set -g @altcolor 'cyan'
