refactor bash colorschemes changed around the colors in the light terminal colorscheme so that the same color numbers (e.g. 30m) could be referenced in the bash prompt regardless of theme. Since the prompt uses the same numbers for either terminal colorscheme, all the bash prompt color changing could be removed

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -4,7 +4,7 @@ background            #F0F0F0
 foreground            #3e3e3e
 cursor                #3f3f3f
 selection_background  #a9c1e2
-color0                #3e3e3e
+color0                #babbbc
 color8                #666666
 color1                #970b16
 color9                #de0000
@@ -16,7 +16,7 @@ color4                #005cc5
 color12               #2e6cba 
 color5                #e94691
 color13               #d73a49
-color6                #89d1ec
+color6                #005cc5 
 color14               #1cfafe
 color7                #babbbc
 color15               #666666
