--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,32 @@ bind-key -T copy-mode-vi 'M-l' select-pane -R
 bind-key -T copy-mode-vi 'M-\' select-pane -l
 
 # status bar configuration
-source-file ~/.tmux/theme/theme.conf
+#######################################
+set -g @activecolor 'magenta'
+set -g @inactivecolor 'brightblack'
+set -g @bordercolor 'brightblack'
+set -g @altcolor 'cyan'
+# Panes
+set -g pane-border-lines heavy
+set -g pane-active-border-style "fg=#{@activecolor}"
+set -g pane-border-style "fg=#{@bordercolor}"
+setw -g pane-border-status off
+# Clock Mode
+setw -g clock-mode-colour "#{@altcolor}"
+# Messages
+set -g message-style "bg=terminal,fg=#{@activecolor}"
+set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
+# Bars
+set -g status-interval 1
+set -g status on
+set -g status-style "#{?client_prefix,strikethrough#,fg=#{@activecolor}#,bg=terminal#,nobold,bg=terminal#,fg=#{@bordercolor}#,strikethrough#,nobold#,overline}"
+set -g status-right ""
+set -g status-left "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#S#[fg=#{@bordercolor}]]"
+# Windows
+set -g status-justify right
+set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}]]"
+set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}]]"
+set -g window-status-separator "#[nostrikethrough,#{?client_prefix,fg=#{@activecolor},fg=#{@bordercolor}}]╾─╼"
 
 # Plugins
 #######################################
