--- a/tmux.conf
+++ b/tmux.conf
@@ -48,14 +48,13 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 set -g @activecolor 'magenta'
 set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'brightblack'
-set -g @altcolor 'cyan'
 # Panes
 set -g pane-border-lines heavy
 set -g pane-active-border-style "fg=#{@activecolor}"
 set -g pane-border-style "fg=#{@bordercolor}"
 setw -g pane-border-status off
 # Clock Mode
-setw -g clock-mode-colour "#{@altcolor}"
+setw -g clock-mode-colour 'cyan'
 # Messages
 set -g message-style "bg=terminal,fg=#{@activecolor}"
 set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
