--- a/tmux.conf
+++ b/tmux.conf
@@ -46,8 +46,8 @@ bind-key -T copy-mode-vi 'M-\' select-pane -l
 # status bar configuration
 #######################################
 set -g @activecolor 'magenta'
-set -g @inactivecolor 'brightblack'
-set -g @bordercolor 'brightblack'
+set -g @inactivecolor 'black'
+set -g @bordercolor 'black'
 # Panes
 set -g pane-border-lines heavy
 set -g pane-active-border-style "fg=#{@activecolor}"
