--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1512,7 +1512,5 @@ map kitty_mod+v paste_from_clipboard
 
 allow_remote_control yes
 
-# BEGIN_KITTY_THEME
-# Nord
+# load colorscheme
 include current-theme.conf
-# END_KITTY_THEME
