remove vim theme switching logic Moved colors around in the kitty terminal day theme so that vim won't have to change the its theme

--- a/install.d/install.conf.yaml
+++ b/install.d/install.conf.yaml
@@ -2,15 +2,11 @@
     link:
       create: true
 
-- clean: ['~', '~/.config', '~/.vim', '~/.vim/colorscheme']
+- clean: ['~', '~/.config']
 
 - link:
     ~/.tmux.conf: tmux.conf
-    ~/.vimrc: vim/vimrc
-    ~/.vim/colorscheme: vim/colorscheme
-    ~/.vim/colorscheme/colorscheme-name.txt:
-        path: ~/.vim/colorscheme/night-colorscheme-name.txt
-        if: '[ ! -f ~/.vim/colorscheme/colorscheme-name.txt ]'
+    ~/.vimrc: vimrc
     ~/.gitconfig: gitconfig
     ~/.xbindkeysrc: xbindkeysrc
     ~/.bashrc: bashrc
