--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -5,10 +5,10 @@ foreground            #3e3e3e
 cursor                #3f3f3f
 selection_background  #a9c1e2
 color0                #babbbc
-color8                #666666
+color8                #8f9aa9
 color1                #970b16
 color9                #de0000
-color2                #07962a
+color2                #2e6cba
 color10               #87d5a2
 color3                #f7edc7
 color11               #f0cf06
@@ -16,8 +16,8 @@ color4                #005cc5
 color12               #2e6cba 
 color5                #e94691
 color13               #d73a49
-color6                #005cc5 
-color14               #1cfafe
+color6                #2e6cba
+color14               #d73a49
 color7                #babbbc
 color15               #666666
 selection_foreground  #f0f0f0
