--- a/install.d/install.conf.yaml
+++ b/install.d/install.conf.yaml
@@ -19,8 +19,8 @@
     ~/.default-npm-packages: asdf/default-npm-packages
     ~/bin: bin
     ~/.cloudflared/config.yaml: cloudflared/config.yaml
-    ~/.rgignore: rgignore
-    ~/.ripgreprc: ripgreprc
+    ~/.rgignore: ripgrep/rgignore
+    ~/.ripgreprc: ripgrep/ripgreprc
 
 - create:
     - ~/code
