--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,11 @@ set -g default-terminal "xterm-256color"
 set-option -g allow-rename off
 set-option -g renumber-windows on
 bind-key -n MouseDrag1Status swap-window -d -t=
+setw -g aggressive-resize on
+set -s escape-time 0
+# have window indices start from 1
+set -g base-index 1
+bind-key C-b last-window
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
@@ -13,7 +18,7 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -h -c '#{pane_current_path}'
 bind % split-window -v -c '#{pane_current_path}'
 # reload
-bind r run-shell 'tmux display-message "Reloading TMUX..." && tmux source ~/.tmux.conf'
+bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX..."'
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
 bind-key -n M-RIght next-window
@@ -24,10 +29,10 @@ bind-key -n M-z resize-pane -Z
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n M-Left if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
-bind-key -n M-Down if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
-bind-key -n M-Up if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
-bind-key -n M-Right if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
+bind-key -n C-Left if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
+bind-key -n C-Down if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
+bind-key -n C-Up if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
+bind-key -n C-Right if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
     "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
@@ -64,7 +69,7 @@ set -g status-left "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#
 set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}]]"
 set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}]]"
-set -g window-status-separator "#[nostrikethrough,#{?client_prefix,fg=#{@activecolor},fg=#{@bordercolor}}]╾─╼"
+set -g window-status-separator "#[strikethrough,#{?client_prefix,fg=#{@activecolor},fg=#{@bordercolor}}]  "
 
 # Plugins
 #######################################
@@ -75,6 +80,7 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 # allows saving the state of tmux to a file so it can be restored later
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+    set -g @resurrect-processes '"~watch" mosh-client'
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
