--- a/install.d/install.conf.yaml
+++ b/install.d/install.conf.yaml
@@ -17,6 +17,7 @@
     ~/.asdfrc: asdf/asdfrc
     ~/.default-python-packages: asdf/default-python-packages
     ~/.default-npm-packages: asdf/default-npm-packages
+    ~/.default-cargo-crates: asdf/default-cargo-crates
     ~/bin: bin
     ~/.cloudflared/config.yaml: cloudflared/config.yaml
     ~/.rgignore: ripgrep/rgignore
