--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,23 +1,24 @@
-# Github Light
+# Solarized Light
+# taken from: https://github.com/dexpota/kitty-themes/blob/master/themes/Solarized_Light.conf
 
-background            #F0F0F0
-foreground            #3e3e3e
-cursor                #3f3f3f
-selection_background  #a9c1e2
-color0                #babbbc
-color8                #8f9aa9
-color1                #970b16
-color9                #de0000
-color2                #2e6cba
-color10               #87d5a2
-color3                #f7edc7
-color11               #f0cf06
-color4                #005cc5 
-color12               #2e6cba 
-color5                #e94691
-color13               #d73a49
-color6                #2e6cba
-color14               #d73a49
-color7                #babbbc
-color15               #666666
-selection_foreground  #f0f0f0
+background            #fdf6e3
+foreground            #52676f
+cursor                #52676f
+selection_background  #e9e2cb
+color0 #818181
+color8 #818181
+color1 #d70000
+color9 #d75f00
+color2 #5f8700
+color10 #585858
+color3 #af8700
+color11 #626262
+color4 #0087ff
+color12 #808080
+color5 #af005f
+color13 #5f5faf
+color6 #00afaf
+color14 #8a8a8a
+color7 #262626
+color15 #1c1c1c
+selection_foreground #fcf4dc
