adjust day theme colors

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -5,7 +5,7 @@ background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
 selection_background  #e9e2cb
-color0 #818181
+color0 #C9C3AF
 color8 #818181
 color1 #d70000
 color9 #d75f00
