add theme for gitui

--- a/install.d/install.conf.yaml
+++ b/install.d/install.conf.yaml
@@ -22,6 +22,7 @@
     ~/.cloudflared/config.yaml: cloudflared/config.yaml
     ~/.rgignore: ripgrep/rgignore
     ~/.ripgreprc: ripgrep/ripgreprc
+    ~/.config/gitui/theme.ron: gitui/theme.ron
 
 - create:
     - ~/code
