enable autocomplete for bash aliases

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "installer/dotbot-asdf"]
 	path = install.d/dotbot-asdf
 	url = https://github.com/sobolevn/dotbot-asdf.git
+[submodule "bash/complete-alias"]
+	path = bash/complete-alias
+	url = https://github.com/cykerway/complete-alias
