add tmux keybind for popup window

--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,13 @@ bind-key -n M-RIght next-window
 # toggle zoom on pane
 bind-key -n M-z resize-pane -Z
 
+# popup
+bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
+    # TODO: Find a way to programatically close the popup. For now I need to manually type control+c or escape
+} {
+   display-popup -d '#{pane_current_path}' -w90% -h90% "tmux attach -t popup || tmux new -s popup"
+}
+
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
