fix: tmux popup toggling

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,9 +27,9 @@ bind-key -n M-z resize-pane -Z
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
-    # TODO: Find a way to programatically close the popup. For now I need to manually type control+c or escape
+   detach-client
 } {
-   display-popup -d '#{pane_current_path}' -w90% -h90% "tmux attach -t popup || tmux new -s popup"
+   display-popup -E -d '#{pane_current_path}' -w90% -h90% -- "tmux attach -t popup || tmux new -s popup"
 }
 
 # Smart pane switching with awareness of Vim splits.
