--- a/install.d/install.conf.yaml
+++ b/install.d/install.conf.yaml
@@ -24,6 +24,7 @@
     ~/.rgignore: ripgrep/rgignore
     ~/.ripgreprc: ripgrep/ripgreprc
     ~/.config/gitui/theme.ron: gitui/theme.ron
+    ~/.inputrc: inputrc
 
 - create:
     - ~/code
