--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "dotbot"]
-	path = install.d/dotbot
+	path = install/dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
 [submodule "installer/dotbot-asdf"]
-	path = install.d/dotbot-asdf
+	path = install/dotbot-asdf
 	url = https://github.com/sobolevn/dotbot-asdf.git
 [submodule "bash/complete-alias"]
 	path = bash/complete-alias
