--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -18,12 +18,12 @@ url_color             #0087BD
 cursor                #81A1C1
 
 # black
-color0   #3B4252
-color8   #4C566A
+color0   #454d60
+color8   #626f89
 
 # red
 color1   #BF616A
-color9   #BF616A
+color9   #d08770
 
 # green
 color2   #A3BE8C
