--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,8 @@ set -g status-interval 1
 set -g status on
 set -g status-style "#{?client_prefix,strikethrough#,fg=#{@activecolor}#,bg=terminal#,nobold,bg=terminal#,fg=#{@bordercolor}#,strikethrough#,nobold#,overline}"
 set -g status-right ""
-set -g status-left "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#S#[fg=#{@bordercolor}]]"
+set -g status-left-length 40
+set -g status-left "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]tmux v#(tmux -V | cut -d' ' -f2)#[fg=#{@bordercolor}]]#[strikethrough,#{?client_prefix,fg=#{@activecolor},fg=#{@bordercolor}}]  #[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#S#[fg=#{@bordercolor}]]"
 # Windows
 set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}]]"
