--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -2,11 +2,15 @@
     link:
       create: true
 
-- clean: ['~', '~/.config']
+- clean: ['~', '~/.config', '~/.vim', '~/.vim/colorscheme']
 
 - link:
     ~/.tmux.conf: tmux.conf
-    ~/.vimrc: vimrc
+    ~/.vimrc: vim/vimrc
+    ~/.vim/colorscheme: vim/colorscheme
+    ~/.vim/colorscheme/colorscheme-name.txt:
+        path: ~/.vim/colorscheme/night-colorscheme-name.txt
+        if: '[ ! -f ~/.vim/colorscheme/colorscheme-name.txt ]'
     ~/.gitconfig: gitconfig
     ~/.xbindkeysrc: xbindkeysrc
     ~/.bashrc: bash/bashrc
