--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -5,20 +5,21 @@ background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
 selection_background  #e9e2cb
-color0 #C9C3AF
+selection_foreground #52676f
+url_color #d75f00
+color0 #b8b095
 color8 #818181
 color1 #d70000
 color9 #d75f00
 color2 #5f8700
-color10 #585858
+color10 #5f8700
 color3 #af8700
-color11 #626262
+color11 #af8700
 color4 #0087ff
-color12 #808080
+color12 #0087ff
 color5 #af005f
 color13 #5f5faf
 color6 #00afaf
-color14 #8a8a8a
+color14 #00afaf
 color7 #262626
 color15 #1c1c1c
-selection_foreground #fcf4dc
