--- a/tmux.conf
+++ b/tmux.conf
@@ -36,20 +36,14 @@ bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
 # See: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-bind-key -n C-Left if-shell "$is_vim" 'send-keys C-Left'  'select-pane -L'
-bind-key -n C-Down if-shell "$is_vim" 'send-keys C-Down'  'select-pane -D'
-bind-key -n C-Up if-shell "$is_vim" 'send-keys C-Up'  'select-pane -U'
-bind-key -n C-Right if-shell "$is_vim" 'send-keys C-Right'  'select-pane -R'
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\'  'select-pane -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys M-\\\\'  'select-pane -l'"
-bind-key -T copy-mode-vi 'M-h' select-pane -L
-bind-key -T copy-mode-vi 'M-j' select-pane -D
-bind-key -T copy-mode-vi 'M-k' select-pane -U
-bind-key -T copy-mode-vi 'M-l' select-pane -R
-bind-key -T copy-mode-vi 'M-\' select-pane -l
+bind-key -n C-h if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n C-j if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n C-k if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n C-l if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
 
 # status bar configuration
 #######################################
