--- a/tmux.conf
+++ b/tmux.conf
@@ -20,7 +20,7 @@ bind % split-window -v -c '#{pane_current_path}'
 bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX..."'
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
-bind-key -n M-RIght next-window
+bind-key -n M-Right next-window
 # toggle zoom on pane
 bind-key -n M-z resize-pane -Z
 
