add vim-style keybinds

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,6 +21,8 @@ bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMU
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
+bind-key -n M-H previous-window
+bind-key -n M-L next-window
 # toggle zoom on pane
 bind-key -n M-z resize-pane -Z
 
