yellow for vim and tmux status lines

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,7 +44,7 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
 # status bar configuration
 #######################################
-set -g @activecolor 'magenta'
+set -g @activecolor 'yellow'
 set -g @inactivecolor 'black'
 set -g @bordercolor 'black'
 # Panes
