have kitty titlebar match terminal background color for wayland

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1030,7 +1030,7 @@ allow_remote_control yes
 
 #: OS specific tweaks {{{
 
-# wayland_titlebar_color background
+wayland_titlebar_color background
 
 #: Change the color of the kitty window's titlebar on Wayland systems
 #: with client side window decorations such as GNOME. A value of
