use tool-versions file instead of dotbot-asdf why I'm using a tool-versions file over dotbot-asdf: 1. asdf will automatically install all the tools specified in the tool-versions file by running 'asdf install', no need for another tool. 2. While dotbot-asdf does have an option for installing asdf plugins, it doesn't install the system dependencies necessary to install that tool (these are usually specified in the readme of the plugin). So I'm going to have to manually install something for each plugin anyway

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -24,6 +24,7 @@
     ~/.default-python-packages: asdf/default-python-packages
     ~/.default-npm-packages: asdf/default-npm-packages
     ~/.default-cargo-crates: asdf/default-cargo-crates
+    ~/.tool-versions: asdf/tool-versions
     ~/bin: bin
     ~/.cloudflared/config.yaml: cloudflared/config.yaml
     ~/.rgignore: ripgrep/rgignore
@@ -33,24 +34,6 @@
 
 - create:
     - ~/code
-
-- asdf:
-    - plugin: python
-      global: 3.10.0
-      versions:
-          - 3.10.0
-    - plugin: nodejs
-      global: 16.3.1
-      versions:
-          - 16.3.1
-    - plugin: golang
-      global: 1.17.2
-      versions:
-          - 1.17.2
-    - plugin: rust
-      global: 1.57.0
-      versions:
-          - 1.57.0
 
 - shell:
     - [./smart-plug/install , Install and start smart plug service]
