--- a/tmux.conf
+++ b/tmux.conf
@@ -24,7 +24,7 @@ bind-key -n M-Right next-window
 bind-key -n M-H previous-window
 bind-key -n M-L next-window
 # toggle zoom on pane
-bind-key -n M-z resize-pane -Z
+bind-key -n M-m resize-pane -Z
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
