keybinds for splitting windows that are easier to remember

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,8 @@ set -g base-index 1
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically using the current pane's directory as the new pane's directory
-bind '"' split-window -h -c '#{pane_current_path}'
-bind % split-window -v -c '#{pane_current_path}'
+bind '|' split-window -h -c '#{pane_current_path}'
+bind '_' split-window -v -c '#{pane_current_path}'
 # reload
 bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX..."'
 # use alt/meta + arrow to navigate windows
