--- a/tmux.conf
+++ b/tmux.conf
@@ -60,15 +60,15 @@ set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "#{?client_prefix,strikethrough#,fg=#{@activecolor}#,bg=terminal#,nobold,bg=terminal#,fg=#{@bordercolor}#,strikethrough#,nobold#,overline}"
-set -g status-right ""
+set -g status-style "#{?client_prefix,strikethrough#,fg=#{@activecolor}#,bg=terminal#,italics,bg=terminal#,fg=#{@bordercolor}#,strikethrough#,italics}"
+set -g status-right "#[align=centre]"
 set -g status-left-length 40
-set -g status-left "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]tmux:#S#[fg=#{@bordercolor}]]"
+set -g status-left "             #[align=centre,nostrikethrough,fg=#{@bordercolor}] #[fg=#{@activecolor}]tmux:#S#[fg=#{@bordercolor}] / "
 # Windows
-set -g status-justify right
-set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}]]"
-set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}][#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}]]"
-set -g window-status-separator "#[strikethrough,#{?client_prefix,fg=#{@activecolor},fg=#{@bordercolor}}]  "
+set -g status-justify centre
+set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
+set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}] "
+set -g window-status-separator "#[fg=black,nostrikethrough] / "
 
 # Plugins
 #######################################
