--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Inconsolata-g
+font_family      Ubuntu Mono
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -23,7 +23,7 @@ font_family      Inconsolata-g
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 15.0
+font_size 18.0
 
 #: Font size (in pts)
 
