--- a/tmux.conf
+++ b/tmux.conf
@@ -44,14 +44,16 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
 # status bar configuration
 #######################################
-set -g @activecolor 'magenta'
+set -g status-position 'bottom'
+set -g pane-border-status bottom
+set -g pane-border-format ''
+set -g @activecolor 'blue'
 set -g @inactivecolor 'black'
 set -g @bordercolor 'black'
 # Panes
-set -g pane-border-lines heavy
+set -g pane-border-lines single
 set -g pane-active-border-style "fg=#{@activecolor}"
 set -g pane-border-style "fg=#{@bordercolor}"
-setw -g pane-border-status off
 # Clock Mode
 setw -g clock-mode-colour 'cyan'
 # Messages
@@ -60,14 +62,14 @@ set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "#{?client_prefix,strikethrough#,fg=#{@activecolor}#,bg=terminal#,italics,bg=terminal#,fg=#{@bordercolor}#,strikethrough#,italics}"
+set -g status-style "#{?client_prefix,nostrikethrough#,fg=#{@activecolor}#,bg=terminal#,italics,bg=terminal#,fg=#{@bordercolor}#,nostrikethrough#,italics}"
 set -g status-right "#[align=centre]"
 set -g status-left-length 40
-set -g status-left "             #[align=centre,nostrikethrough,fg=#{@bordercolor}] #[fg=#{@activecolor}]tmux:#S#[fg=#{@bordercolor}] / "
+set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]tmux:#S#[fg=#{@bordercolor}] "
 # Windows
-set -g status-justify centre
+set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
-set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}] "
+set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}]"
 set -g window-status-separator "#[fg=black,nostrikethrough] / "
 
 # Plugins
