tweak tmux statusline

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,7 +48,7 @@ set -g status-position 'bottom'
 set -g pane-border-status bottom
 set -g pane-border-format ''
 set -g @activecolor 'blue'
-set -g @inactivecolor 'black'
+set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'black'
 # Panes
 set -g pane-border-lines single
