--- a/tmux.conf
+++ b/tmux.conf
@@ -62,9 +62,9 @@ set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "#{?client_prefix,nostrikethrough#,fg=#{@activecolor}#,bg=terminal#,italics,bg=terminal#,fg=#{@bordercolor}#,nostrikethrough#,italics}"
+set -g status-style "bg=terminal,fg=#{@bordercolor},nostrikethrough,italics"
 set -g status-left-length 40
-set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]tmux:#S#[fg=#{@bordercolor}] "
+set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,-- PREFIX MODE --,tmux:#S}#[fg=#{@bordercolor}] "
 # Windows
 set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
